# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License"); you
# may not use this file except in compliance with the License.  You
# may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.  See the License for the specific language governing
# permissions and limitations under the License.

[package]
name = "examples"
version = "0.1.0"
authors = ["Mats Kindahl <matski@google.com>"]
edition = "2018"

[dependencies]
criterion = "0.1.2"
bytes = "0.4.12"
futures = "0.1.27"
tokio = "0.1.21"

[[example]]
name = "proxy-udp"
path = "examples/tokio/proxy-udp.rs"

[[example]]
name = "avl-simple"
path = "examples/avl/simple.rs"

[[bench]]
name = "avl_insert"
harness = false

[[bench]]
name = "expr_simple"
harness = false
